--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.6",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.3.5",
+        "tailwindcss": "^2.2.4",
+        "vue": "^2.6.14"
+    },
+    "dependencies": {
+        "vue-router": "^3.5.2",
+        "vuex": "^3.6.2"
     }
 }
